<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp">

    <!-- Title -->
    <EditText
        android:id="@+id/titleEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/title"
        android:inputType="text"
        android:layout_marginBottom="8dp" />

    <!-- Date -->
    <EditText
        android:id="@+id/dateEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/date"
        android:focusable="false"
        android:inputType="none"
        android:layout_marginBottom="8dp"
        android:textColorHint="@color/black"
        android:textColor="@color/black"
        android:background="@drawable/rounded_item"
        android:padding="8dp"
        tools:ignore="TextFields" />

    <!-- Reward -->
    <EditText
        android:id="@+id/rewardEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/reward"
        android:inputType="number"
        android:layout_marginBottom="8dp" />

    <!-- Priority -->
    <Spinner
        android:id="@+id/prioritySpinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp" />

    <!-- Done Checkbox -->
    <CheckBox
        android:id="@+id/doneCheckBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/done" />

</LinearLayout>
