<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    android:background="@android:color/white">

    <!-- Logo at the center top -->
    <ImageView
        android:id="@+id/logoImageView"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_gravity="center"
        android:layout_marginBottom="16dp"
        android:src="@drawable/ic_logo"
        android:contentDescription="@string/app_name" />

    <TextView
        android:id="@+id/aboutUsTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/about_us"
        android:textSize="24sp"
        android:textStyle="bold"
        android:textColor="@color/design_default_color_primary_dark"
        android:layout_gravity="center"
        android:layout_marginBottom="16dp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:text="FamilyNest is an application designed to help families manage their daily tasks, budget, and shopping lists efficiently. With features that allow task assignment, budget tracking, and shopping list management, FamilyNest makes household management a breeze. Stay connected, stay organized, and make the most out of your family time."
        android:textSize="16sp"
        android:layout_marginBottom="16dp" />

    <TextView
        android:id="@+id/contactUsTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/contact_us"
        android:textSize="24sp"
        android:textStyle="bold"
        android:textColor="@color/design_default_color_primary_dark"
        android:layout_gravity="center"
        android:layout_marginBottom="16dp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="If you have any questions or feedback, please contact us at support@familynest.com."
        android:textSize="16sp"
        android:textColor="@color/black"
        android:layout_marginBottom="16dp" />

    <Button
        android:id="@+id/backToMainButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/back_to_main"
        android:layout_gravity="center" />

</LinearLayout>
