<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:padding="8dp"
    android:background="@drawable/rounded_item"
    android:layout_marginBottom="8dp">

    <!-- Shopping Item Name and Cost -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/nameTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/item_name"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:layout_weight="1" />

        <TextView
            android:id="@+id/costTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="$0.00"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textColor="@color/black"/>
    </LinearLayout>

    <!-- Done, Edit, Delete Buttons -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="8dp">

        <!-- Done Button on the Left -->
        <CheckBox
            android:id="@+id/doneButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/done"
            android:textColor="@android:color/black"
            app:tint="@android:color/holo_green_dark"/>

        <!-- Spacer to push the Edit and Delete buttons to the right -->
        <View
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <!-- Edit and Delete Buttons on the Right -->
        <ImageButton
            android:id="@+id/editButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_edit"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:contentDescription="@string/edit_item"
            android:layout_marginEnd="8dp" />

        <ImageButton
            android:id="@+id/deleteButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_delete"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:contentDescription="@string/delete_item"
            app:tint="@android:color/holo_red_dark"/>
    </LinearLayout>
</LinearLayout>
