<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:padding="8dp"
    android:background="@drawable/rounded_item"
    android:layout_marginBottom="8dp">

    <!-- Family Member Name and Rewards -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical">

        <!-- Family Member Name -->
        <TextView
            android:id="@+id/nameTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:text="@string/name" />

        <!-- Family Member Rewards -->
        <TextView
            android:id="@+id/rewardsTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:textColor="@android:color/holo_green_dark"
            android:text="Rewards: 0"
            android:gravity="end" />
    </LinearLayout>

    <!-- Edit and Delete Buttons -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="end"
        android:layout_marginTop="8dp">

        <ImageButton
            android:id="@+id/editButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_edit"
            android:contentDescription="@string/edit_family_member"
            android:background="?attr/selectableItemBackgroundBorderless"
            app:tint="@color/black"
            android:layout_marginEnd="8dp" />

        <ImageButton
            android:id="@+id/deleteButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_delete"
            android:contentDescription="@string/delete_family_member"
            android:background="?attr/selectableItemBackgroundBorderless"
            app:tint="@color/danger"
            android:layout_marginStart="8dp" />
    </LinearLayout>
</LinearLayout>
